perf: removes emojis from mardowns

--- a/markdowns/form-wizard-markdown.mdx
+++ b/markdowns/form-wizard-markdown.mdx
@@ -1,32 +1,32 @@
-Form Wizard ✨ is a form builder designed to streamline the process of creating forms with ease. With a wide array of features including 🖱️ drag and drop functionality, 📊 analytics visualization, 👀 real-time preview, and 🔐 secure user authentication, Form Wizard empowers you to create professional forms effortlessly.
+Form Wizard is a form builder designed to streamline the process of creating forms with ease. With a wide array of features including drag and drop functionality, analytics visualization, real-time preview, and secure user authentication, Form Wizard empowers you to create professional forms effortlessly.
 
-## 🚀 Features
+## Features
 
-### 1. 🖱️ Drag and Drop
+### 1. Drag and Drop
 
 Easily customize your forms by dragging and dropping elements such as text fields, checkboxes, radio buttons, and more.
 
-### 2. 📊 Analytics Visualization
+### 2. Analytics Visualization
 
 Obtain data analysis for responses submitted through the forms.
 
-### 3. 👀 Preview While Building
+### 3. Preview While Building
 
 Preview your form in real-time as you build it. See exactly how your form will appear to users before it goes live.
 
-### 4. 🛠️ Custom Fields
+### 4. Custom Fields
 
 Customize each field to meet your unique requirements.
 
-## 🏗️ Built with
+## Built with
 
-- [⚛️ React.js](https://reactjs.org/)
-- [💨 Next.js](https://nextjs.org/)
-- [🎨 Tailwind CSS](https://tailwindcss.com/)
-- [🖌️ Shadcn.ui](https://ui.shadcn.com/)
-- [🛡️ Supabase](https://supabase.com/)
-- [🔍 React Query](https://tanstack.com/query/v3/)
-- [✅ Zod](https://zod.dev/)
-- [📝 React Hook Form](https://react-hook-form.com/)
-- [🎯 Dnd Kit](https://dndkit.com/)
-- [📈 Recharts](https://recharts.org/en-US/)
+- [React.js](https://reactjs.org/)
+- [Next.js](https://nextjs.org/)
+- [Tailwind CSS](https://tailwindcss.com/)
+- [Shadcn.ui](https://ui.shadcn.com/)
+- [Supabase](https://supabase.com/)
+- [React Query](https://tanstack.com/query/v3/)
+- [Zod](https://zod.dev/)
+- [React Hook Form](https://react-hook-form.com/)
+- [Dnd Kit](https://dndkit.com/)
+- [Recharts](https://recharts.org/en-US/)
