--- a/markdowns/cosmicus-markdown.mdx
+++ b/markdowns/cosmicus-markdown.mdx
@@ -1,6 +1,6 @@
-🚀 **Cosmicus** is a gamified application designed to teach computational thinking in a fun and engaging way. With a space-themed adventure, players learn core problem-solving skills through interactive challenges and missions.
+**Cosmicus** is a gamified application designed to teach computational thinking in a fun and engaging way. With a space-themed adventure, players learn core problem-solving skills through interactive challenges and missions.
 
-## 🌟 Features
+## Features
 
 - **Gamified Learning**: Solve puzzles and complete missions to advance through space.
 - **Core Computational Concepts**: Learn sequencing, pattern recognition, abstraction, and algorithmic thinking.
@@ -8,13 +8,13 @@
 - **Interactive Storyline**: Experience an immersive space journey while mastering problem-solving skills.
 - **Progress Tracking**: Monitor learning progress and unlock new levels.
 
-## 🎮 How to Play
+## How to Play
 
 1. Start your mission by solving space-themed computational puzzles.
 2. Earn rewards and progress through different planets.
 3. Level up and become a master of computational thinking!
 
-## 📖 Learning Objectives
+## Learning Objectives
 
 Cosmicus aims to enhance:
 
